new page of events added7

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -61,7 +61,7 @@
                     <a class="nav-link " href="index.html">HOME</a>
                     <a class="nav-link" href="#">ABOUT US</a>
                     <a class="nav-link" href="causes.html">CAUSES</a>
-                    <a class="nav-link" href="#">EVENTS</a>
+                    <a class="nav-link" href="events.html">EVENTS</a>
                     <a class="nav-link" href="#">BLOGS</a>
                     <a class="nav-link" href="#">STAFF</a>
                     <a class="nav-link" href="#">CONTACT US</a>
@@ -71,16 +71,14 @@
         </div>
     </nav>
     <!-- hero section -->
-    <div class="comtainer mt-4">
-        <div class="mainImage1">
+    <div class="comtainer">
+        <div class="mainImage2">
             <img src="assets/main-image-1.jpg" alt="">
-            <div class="mainImage1Txt ">
-                <h4>About US</h4>
+            <div class="mainImage1Txt2">
+                <h4 style="color: white; font-weight: bold;">ABOUT US</h4>
                 <div class="box d-sm-flex">
-                    <div class="col">
-                        <p class="box1"><span>: :</span>home <span style="color: black;padding-left: 10px;">/</span></p>
+                    <p class="box1"><span>: :</span>home <span style="color: black;padding-left: 10px;">/</span></p>
                     <p class="box2"><span>: :</span>about us</p>
-                    </div>
                 </div>
             </div>
         </div>
