--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <a class="nav-link " href="#">HOME</a>
                     <a class="nav-link" href="aboutUs.html">ABOUT US</a>
                     <a class="nav-link" href="causes.html">CAUSES</a>
-                    <a class="nav-link" href="#">EVENTS</a>
+                    <a class="nav-link" href="events.html">EVENTS</a>
                     <a class="nav-link" href="#">BLOGS</a>
                     <a class="nav-link" href="#">STAFF</a>
                     <a class="nav-link" href="#">CONTACT US</a>
