--- a/causes.html
+++ b/causes.html
@@ -61,7 +61,7 @@
                     <a class="nav-link " href="index.html">HOME</a>
                     <a class="nav-link" href="aboutUs.html">ABOUT US</a>
                     <a class="nav-link" href="#">CAUSES</a>
-                    <a class="nav-link" href="#">EVENTS</a>
+                    <a class="nav-link" href="events.html">EVENTS</a>
                     <a class="nav-link" href="#">BLOGS</a>
                     <a class="nav-link" href="#">STAFF</a>
                     <a class="nav-link" href="#">CONTACT US</a>
@@ -241,7 +241,112 @@
             </div>
         </div>
      </div>
-    <br><br><br><br><br><br><br><br><br><br>
+    <!-- change -->
+    <div id="change" class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2 class="changeHead">Change Their World. Change Yours. This changes everything.</h2>
+                </div>
+                <div class="col-md-6 ">
+                    <div class="row">
+                        <!-- <div class="col-md-1"></div> -->
+                        <div class="col-lg-5">
+                            <button class="volunteer">Become volunteer</button>
+                        </div>
+                        <div class="col-lg-3">
+                            <p class="or">or</p>
+                        </div>
+                        <div class="col-lg-4">
+                            <button class="volunteer">donate us</button>
+                        </div>
+                    </div>
+                    <!-- <div class="d-lg-flex">
+                        <button class="volunteer">Become volunteer</button>
+                        <p class="or">or</p>
+                        <button class="volunteer">donate us</button>
+                    </div> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer -->
+    <div id="footer" class="container-fluid">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-md-3">
+                    <h5 class="feat">about charity</h5>
+                    <div class="sponLine my-3 "></div>
+                    <p style="font-size: small; padding-top:20px; font-size: 0.875rem;">
+                        Charity vitae diam pulvinar, tempus dia aliquam tellus. Quisque mattis odio eu
+                        placerat luctus. Vivamus magna elit, ultrices non lacinia vel, tempor vitae tell Fusce sit amet
+                        sem sit amet
+                        tempor vitae tell Fusce sit amet sem sit amet.
+                    </p>
+                </div>
+                <div class="col-md-3">
+                    <h5 class="feat">quick links</h5>
+                    <div class="sponLine my-3 "></div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul class="link">
+                                <a href="">
+                                    <li>causes</li>
+                                </a>
+                                <a href="">
+                                    <li>projects</li>
+                                </a>
+                                <a href="">
+                                    <li>gallery</li>
+                                </a>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul class="link">
+                                <a href="">
+                                    <li>Terms of use</li>
+                                </a>
+                                <a href="">
+                                    <li>legal disclaimer</li>
+                                </a>
+                                <a href="">
+                                    <li>privacy policy</li>
+                                </a>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <h5 class="feat">newsletter signup</h5>
+                    <div class="sponLine my-3 "></div>
+                    <p style="font-size: small; padding-top:20px; font-size: 0.875rem;">
+                        Select your newsletters, enter your email address, and click "Subscribe"
+                    </p>
+                    <div class="input-group pt-3">
+                        <input placeholder="Email Address" type="text" class="form-control rounded-0 h-auto" aria-label="Dollar amount (with dot and two decimal places)">
+                        <span style="background: #fa6f1c; color: white;" class="input-group-text rounded-0">Go</span>
+                      </div>
+                </div>
+                <div class="col-md-3">
+                    <h5 class="feat">contact us</h5>
+                    <div class="sponLine my-3 "></div>
+                    <p style="font-size: small; padding-top:20px; font-size: 0.875rem;">
+                        Address: 51 Sherbrooke W., Montreal, Quebec, Canada
+                    </p>
+                    <div class="iconss">
+                        <i style="color: white;" class="fa-solid fa-phone-flip"></i>
+                        <p style="padding: 0 5px; color: white;">Phone</p>
+                        <p>+1 514 000 0000</p>
+                    </div>
+                    <div class="iconss">
+                        <i style="color: white;" class="fa-regular fa-envelope"></i>
+                        <p style="padding: 0 5px; color: white;">Email</p>
+                        <p>info@charitytheme.com</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
