new files added

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -63,8 +63,8 @@
                     <a class="nav-link" href="causes.html">CAUSES</a>
                     <a class="nav-link" href="events.html">EVENTS</a>
                     <a class="nav-link" href="#">BLOGS</a>
-                    <a class="nav-link" href="#">STAFF</a>
-                    <a class="nav-link" href="#">CONTACT US</a>
+                    <a class="nav-link" href="staff.html">STAFF</a>
+                    <a class="nav-link" href="contactUs.html">CONTACT US</a>
                 </div>
                 <button id="logo_btn" type="button" class="btn rounded-0">DONATE</button>
             </div>
@@ -86,7 +86,7 @@
     <!-- slider section -->
     <div class="container mt-5 py-3">
         <div class="row g-5">
-            <div class="col-md-7">
+            <div class="col-md-8">
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -107,7 +107,7 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-                <p class="lowerTxt py-5 mt-5">
+                <p class="lowerTxt mt-5">
                     Land beast gathered divided. Days is second. Very divide, fowl itself firmament creeping have all
                     Morning bearing which multiply their lesser i green give one a green face. Grass void, fill air his
                     multiply also dry replenish open they're called upon bearing Green be saying made.
@@ -264,7 +264,7 @@
 
             </div>
 
-            <div class="col-md-4 ms-sm-3 ps-sm-5 ">
+            <div class="col-md-4  ">
                 <h5 class="feat ">popular post</h5>
                 <div class="sponLine my-3 "></div>
                 <div class="row my-4">
@@ -296,7 +296,7 @@
                 </div>
                 <h5 class="feat pt-4">upcoming events</h5>
                 <div class="sponLine my-3"></div>
-                <img class="pt-4 w-100 h-auto" src="assets/event-image.jpg" alt="">
+                <img style="max-width: 100%;" class="pt-4 h-auto" src="assets/event-image.jpg" alt="">
                 <h5 style="font-size: 15px; width:65% ;" class="feat my-4 ">
                     organizing desaes events to get good donation
                 </h5>
