--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                
+
                 <div class="navbar-nav">
                     <a class="nav-link " href="#">HOME</a>
                     <a class="nav-link" href="aboutUs.html">ABOUT US</a>
                     <a class="nav-link" href="causes.html">CAUSES</a>
                     <a class="nav-link" href="events.html">EVENTS</a>
                     <a class="nav-link" href="#">BLOGS</a>
-                    <a class="nav-link" href="#">STAFF</a>
-                    <a class="nav-link" href="#">CONTACT US</a>
+                    <a class="nav-link" href="staff.html">STAFF</a>
+                    <a class="nav-link" href="contactUs.html">CONTACT US</a>
                 </div>
                 <button id="logo_btn" type="button" class="btn rounded-0">DONATE</button>
             </div>
@@ -137,16 +137,15 @@
 
     <div class="container my-5 py-5">
         <h2 class="featuretxt text-md-center">FEATURED CAUSES</h2>
-        <div class="d-flex justify-content-md-center align-items-center">
+        <div id="small3" class="d-flex justify-content-center align-items-center">
             <div class="featureLine"></div>
             <img src="assets/ico-droplet.png" alt="">
             <div class="featureLine"></div>
         </div>
-        <p class="featuretxt2 text-md-center m-md-auto">Integer sit amet augue iaculis, ultricies justo nec, commodo
-            nisi. Class aptent
-            taciti sociosqu ad litora torquent per conubia nostra.
+        <p class="featuretxt2 text-md-center m-md-auto">Integer sit amet augue iaculis, ultricies justo nec,
+            commodonisi. Class aptenttaciti sociosqu ad litora torquent per conubia nostra.
         </p>
-        <div class="row my-4 g-5">
+        <div id="small1" class="row my-4 g-5">
             <div class="col">
                 <div class="card rounded-0" style="width: 18rem;">
                     <img style="border-radius: inherit;" src="assets/featured-3 (1).jpg" class="card-img-top" alt="...">
@@ -292,7 +291,7 @@
                                 <p style="width: 112px;">may 23 2024</p>
                             </div>
                         </div>
-                        <div class=" col-lg-6 main2">
+                        <div class=" col-lg-6 main2 pt-4">
                             <h3 class="main3"> Organized food cam for children</h3>
                             <p>
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, iste a. Tempore sed
@@ -340,7 +339,7 @@
                         <button class="fbClass">FAcebook page</button>
                     </div>
                 </div>
-                <img style="width: 100%; height: auto;" src="assets/upcoming-event.jpg" alt="">
+                <img class="pt-4" style="width: 100%; height: auto;" src="assets/upcoming-event.jpg" alt="">
 
                 <h3 class="main3 my-4"> Organized food and concrts to get donations</h3>
                 <div class="row my-3">
@@ -376,58 +375,70 @@
 
         <div class="row g-3">
             <div class="col-md-3">
-                <img style="width: 100%; height: auto;" src="assets/staff-image-1.jpg" alt="">
+                <img class="staffImage" src="assets/staff-image-1.jpg" alt="">
             </div>
             <div id="staff" class="col-md-3">
-                <h4>john martin</h4>
-                <p>Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum felis, vel placerat
-                    nec.</p>
-                <div class="sponLine my-3 m-auto"></div>
-                <div class="staffIcon">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-linkedin-in"></i>
+                <div class="lowerHower">
+                    <h4>john martin</h4>
+                    <p class="changeColor">Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum
+                        felis, vel placerat
+                        nec.</p>
+                    <div class="sponLine my-3 m-auto"></div>
+                    <div class="staffIcon">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
                 </div>
             </div>
             <div class="col-md-3">
                 <img style="width: 100%; height: auto;" src="assets/staff-image-1.jpg" alt="">
             </div>
             <div id="staff" class="col-md-3">
-                <h4>john martin</h4>
-                <p>Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum felis, vel placerat
-                    nec.</p>
-                <div class="sponLine my-3 m-auto"></div>
-                <div class="staffIcon">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-linkedin-in"></i>
+                <div class="lowerHower">
+                    <h4>john martin</h4>
+                    <p class="changeColor">Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum
+                        felis, vel placerat
+                        nec.</p>
+                    <div class="sponLine my-3 m-auto"></div>
+                    <div class="staffIcon">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row g-3">
+        <div id="small2" class="row g-3">
             <div id="staff" class="col-md-3">
-                <h4>john martin</h4>
-                <p>Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum felis, vel placerat
-                    nec.</p>
-                <div class="sponLine my-3 m-auto"></div>
-                <div class="staffIcon">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-linkedin-in"></i>
+                <div class="lowerHower">
+                    <h4>john martin</h4>
+                    <p class="changeColor">Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum
+                        felis, vel placerat
+                        nec.</p>
+                    <div class="sponLine my-3 m-auto"></div>
+                    <div class="staffIcon">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
                 </div>
             </div>
             <div class="col-md-3">
                 <img style="width: 100%; height: auto;" src="assets/staff-image-1.jpg" alt="">
             </div>
             <div id="staff" class="col-md-3">
-                <h4>john martin</h4>
-                <p>Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum felis, vel placerat
-                    nec.</p>
-                <div class="sponLine my-3 m-auto"></div>
-                <div class="staffIcon">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-linkedin-in"></i>
+                <div class="lowerHower">
+                    <h4>john martin</h4>
+                    <p class="changeColor">Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum
+                        felis, vel placerat
+                        nec.</p>
+                    <div class="sponLine my-3 m-auto"></div>
+                    <div class="staffIcon">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
                 </div>
             </div>
             <div class="col-md-3">
@@ -437,13 +448,13 @@
     </div>
     <!-- aboutus -->
     <div class="container my-5 py-5">
-        <h2 class="featuretxt text-md-center">WHAT KIDS ARE SAYING ABOUT US</h2>
-        <div class="d-flex justify-content-md-center align-items-center">
+        <h2 class="featuretxt text-center">WHAT KIDS ARE SAYING ABOUT US</h2>
+        <div class="d-flex justify-content-center align-items-center">
             <div class="featureLine"></div>
             <img src="assets/ico-droplet.png" alt="">
             <div class="featureLine"></div>
         </div>
-        <p class="featuretxt2 text-md-center m-md-auto">
+        <p class="featuretxt2 text-md-center m-auto">
             Our prime purpose in this life is to help people.And if you can't help them at least don't hurt them
         </p>
     </div>
@@ -455,8 +466,7 @@
                 iure labore autem? Cupiditate in commodi sapiente nihil quo pariatur vero doloremque eius autem iure
                 magni, et doloribus.
             </q>
-            <div class="myline m-auto my-3">
-            </div>
+            <div class="myline m-auto my-3"></div>
             <p style="color:#83380b; text-transform:uppercase;" class="author">John Keats</p>
         </div>
         <div style="color: white; background: #fa6f1c; font-size: large;" class="mySlides">
@@ -571,9 +581,10 @@
                         Select your newsletters, enter your email address, and click "Subscribe"
                     </p>
                     <div class="input-group pt-3">
-                        <input  placeholder="Email Address" type="text" class="form-control rounded-0 h-auto" aria-label="Dollar amount (with dot and two decimal places)">
+                        <input placeholder="Email Address" type="text" class="form-control rounded-0 h-auto"
+                            aria-label="Dollar amount (with dot and two decimal places)">
                         <span style="background: #fa6f1c; color: white;" class="input-group-text rounded-0">Go</span>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-md-3">
                     <h5 class="feat">contact us</h5>
@@ -595,7 +606,7 @@
             </div>
         </div>
     </div>
-    
+
     <script>
         var slideIndex = 1;
         showSlides(slideIndex);
