--- a/staff.html
+++ b/staff.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head >
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Causes</title>
+    <title>Staff</title>
     <!-- Font Awsome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body >
+<body style="overflow-x: hidden ;">
     <!-- top Bar -->
     <div id="top" class="container-fluid bg-body-tertiary ">
         <div id="topBar" class="row ">
@@ -60,10 +60,10 @@
                 <div class="navbar-nav">
                     <a class="nav-link " href="index.html">HOME</a>
                     <a class="nav-link" href="aboutUs.html">ABOUT US</a>
-                    <a class="nav-link" href="#">CAUSES</a>
+                    <a class="nav-link" href="causes.html">CAUSES</a>
                     <a class="nav-link" href="events.html">EVENTS</a>
                     <a class="nav-link" href="#">BLOGS</a>
-                    <a class="nav-link" href="staff.html">STAFF</a>
+                    <a class="nav-link" href="#">STAFF</a>
                     <a class="nav-link" href="contactUs.html">CONTACT US</a>
                 </div>
                 <button id="logo_btn" type="button" class="btn rounded-0">DONATE</button>
@@ -73,174 +73,149 @@
     <!-- hero section -->
     <div class="comtainer">
         <div class="mainImage2">
-            <img src="assets/main-image-2.jpg" alt="">
+            <img src="assets/main-image-3.jpg" alt="">
             <div class="mainImage1Txt2">
-                <h4 style="color: white; font-weight: bold;">CAUSES</h4>
+                <h4 style="color: white; font-weight: bold;">STAFF</h4>
                 <div class="box d-sm-flex">
                     <p class="box1"><span>: :</span>home <span style="color: black;padding-left: 10px;">/</span></p>
-                    <p class="box2"><span>: :</span>causes</p>
+                    <p class="box2"><span>: :</span>staff</p>
                 </div>
             </div>
         </div>
     </div>
-    <!-- lower hero section -->
-     <div class="container mt-5 py-3">
-        <div class="row g-5">
-            <div class="col-md-8">
-                <div class="long">
-                    <img src="assets/cause-image-2.jpg" alt="">
-                    <div class="longDiv">
-                        <h3>change a life through education</h3>
-                        <span class="longSpan">for children</span>
-                    </div>
-                    <p id="div">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit. Integer accumsan elit viverra, placerat dolor quis, pulvinar velit. Sed auctor lacus eu purus .
+    <!-- staff -->
+    <div class="container my-5 pt-2">
+        <div class="row g-3">
+            <div class="col-md-3">
+                <img class="staffImage" src="assets/staff-image-1.jpg" alt="">
+            </div>
+            <div id="staff" class="col-md-3">
+                <div class="lowerHower">
+                    <h4
+                        style="text-transform: uppercase;margin-bottom: 21px; font-size: 14px; font-weight: bold;letter-spacing: 0.05em;">
+                        john martin
+                    </h4>
+                    <p class="changeColor">Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum
+                        felis, vel placerat
+                        nec.
                     </p>
-                    <div class="newlongLine">
-                    <div class="newlongLine2">
-                        
+                    <div class="sponLine my-3 m-auto"></div>
+                    <div class="staffIcon">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
                     </div>
-                    <span>84.00%</span>
-                    </div>
-                    <div id="space" class="d-sm-flex justify-content-between w-75 mt-4">
-                        <div class="txt1">
-                            <p>17Sponsors</p>
-                        </div>
-                        <div class="txt2">
-                            <p><span>$56,354.00</span> / $80,700.00</p>
-                        </div>
-                    </div>
-                    <button id="longBtn" type="button" class="btn rounded-0">donate now</button>
-                </div>
-
-                <div class="long mt-5">
-                    <img class="w-100 h-auto" src="assets/cause-image-1.jpg" alt="">
-                    <div class="longDiv">
-                        <h3 >Protect Animals</h3>
-                        <span class="longSpan">for animal</span>
-                    </div>
-                    <p id="div">
-                        Forth fruit beginning life likeness dry day from one rule it
-                        earth isn't sea fourth. Doesn't you're they're herb moved he female wherein shall upon.
-                    </p>
-                    <div class="newlongLine3">
-                    <div class="newlongLine1">
-                    </div>
-                    <span>45.00%</span>
-                    </div>
-                    <div id="space" class="d-sm-flex justify-content-between w-75 mt-4">
-                        <div class="txt1">
-                            <p>12Sponsors</p>
-                        </div>
-                        <div class="txt2">
-                            <p><span>$14,354.00</span> / $124,700.00</p>
-                        </div>
-                    </div>
-                    <button id="longBtn" type="button" class="btn rounded-0">donate now</button>
-                </div>
-                <div class="long mt-5">
-                    <img class="w-100 h-auto" src="assets/cause-image-4.jpg" alt="">
-                    <div class="longDiv">
-                        <h3>Let’s build something incredible</h3>
-                        <span class="longSpan">for human</span>
-                    </div>
-                    <p id="div">
-                        Them behold man cattle seas. The cattle lights give without
-                        . May there spirit cattle lesser his I set night beginning rule, place multiply I beginning.
-                    </p>
-                    <div class="newlongLine3">
-                    <div class="newlongLine1">
-                    </div>
-                    <span>45.00%</span>
-                    </div>
-                    <div id="space" class="d-sm-flex justify-content-between w-75 mt-4">
-                        <div class="txt1">
-                            <p>12Sponsors</p>
-                        </div>
-                        <div class="txt2">
-                            <p><span>$14,354.00</span> / $124,700.00</p>
-                        </div>
-                    </div>
-                    <button id="longBtn" type="button" class="btn rounded-0">donate now</button>
-                </div>
-                <div class="long mt-5">
-                    <img class="w-100 h-auto" src="assets/cause-image-3.jpg" alt="">
-                    <div class="longDiv">
-                        <h3>Give Them Education</h3>
-                        <span class="longSpan">for kids</span>
-                    </div>
-                    <p id="div">
-                        You their kind void. Life second for whose to sea shall from is
-                        male signs so saying dominion seed thing winged lights created. Second fruitful give herb.
-                    </p>
-                    <div class="newlongLine3">
-                    <div class="newlongLine1">
-                    </div>
-                    <span>45.00%</span>
-                    </div>
-                    <div id="space" class="d-sm-flex justify-content-between w-75 mt-4">
-                        <div class="txt1">
-                            <p>45Sponsors</p>
-                        </div>
-                        <div class="txt2">
-                            <p><span>$14,354.00</span> / $124,700.00</p>
-                        </div>
-                    </div>
-                    <button id="longBtn" type="button" class="btn rounded-0">donate now</button>
                 </div>
             </div>
-            <div class="col-md-4">
-                <h5 class="feat pt-4">caused catagories</h5>
-                <div class="sponLine my-3"></div>
-                <ul class="causesList">
-                    <a class="human" href=""><li><span>></span> human</li></a>
-                    <a class="human" href=""><li><span>></span> earthquack affected</li></a>
-                    <a class="human" href=""><li><span>></span> animal</li></a>
-                    <a class="human" href=""><li><span>></span> education</li></a>
-                    <a class="human" href=""><li><span>></span> medical center</li></a>
-                    <a class="human" href=""><li><span>></span> international</li></a>
-                </ul>
-                <h5 class="feat pt-4">latest projects</h5>
-                <div class="sponLine my-3"></div>
-                <div>
-                    <img id="upComing" class="pt-4 h-auto" src="assets/upcoming-event (1).jpg" alt="">
+            <div class="col-md-3">
+                <img style="width: 100%; height: auto;" src="assets/staff-image-2.jpg" alt="">
+            </div>
+            <div id="staff" class="col-md-3">
+                <div class="lowerHower">
+                    <h4
+                        style="text-transform: uppercase;margin-bottom: 21px; font-size: 14px; font-weight: bold;letter-spacing: 0.05em;">
+                        Micheal Dpe
+                    </h4>
+                    <p class="changeColor">Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum
+                        felis, vel placerat
+                        nec.
+                    </p>
+                    <div class="sponLine my-3 m-auto"></div>
+                    <div class="staffIcon">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
                 </div>
-                <h5 style="font-size: 15px; width:65% ;" class="feat my-4 ">
-                    Music charity function
-                </h5>
-                <p style="margin-bottom: 1rem; letter-spacing: 0.025em; width:65% ;">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, animi.
-                </p>
-                <hr>
-                <img id="upComing" class="pt-4 h-auto" src="assets/latest-project-1.jpg" alt="">
-                <h5 style="font-size: 15px; width:65% ;" class="feat my-4 ">
-                    clean water supply
-                </h5>
-                <p style="margin-bottom: 1rem; letter-spacing: 0.025em; width:65% ;">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, animi.
-                </p>
-                <hr>
-                <img id="upComing" class="pt-4 h-auto" src="assets/latest-project-2.jpg" alt="">
-                <h5 style="font-size: 15px; width:65% ;" class="feat my-4 ">
-                    dog got a food
-                </h5>
-                <p style="margin-bottom: 1rem; letter-spacing: 0.025em; width:65% ;">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, animi.
-                </p>
-                <hr>
-                <h5 class="feat pt-4">text widgets</h5>
-                <div class="sponLine my-3"></div>
-                <p>
-                    Gathered gathered for very. Greater of firmament behold fowl moving were beginning stars, all.
-                    <br>
-                    <br>
-                    Seasons wherein the itself upon, cattle gathered Also moveth likeness fowl them fifth, 
-                    him greater Made every day one us morning.
-                </p>
             </div>
         </div>
-     </div>
+        <div id="small2" class="row g-3">
+            <div id="staff" class="col-md-3">
+                <div class="lowerHower">
+                    <h4
+                        style="text-transform: uppercase;margin-bottom: 21px; font-size: 14px; font-weight: bold;letter-spacing: 0.05em;">
+                        john martin
+                    </h4>
+                    <p class="changeColor">Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum
+                        felis, vel placerat
+                        nec.</p>
+                    <div class="sponLine my-3 m-auto"></div>
+                    <div class="staffIcon">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <img style="width: 100%; height: auto;" src="assets/staff-image-3.jpg" alt="">
+            </div>
+            <div id="staff" class="col-md-3">
+                <div class="lowerHower">
+                    <h4
+                        style="text-transform: uppercase;margin-bottom: 21px; font-size: 14px; font-weight: bold;letter-spacing: 0.05em;">
+                        john martin
+                    </h4>
+                    <p class="changeColor">Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum
+                        felis, vel placerat
+                        nec.</p>
+                    <div class="sponLine my-3 m-auto"></div>
+                    <div class="staffIcon">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <img style="width: 100%; height: auto;" src="assets/staff-image-4.jpg" alt="">
+            </div>
+        </div>
+        <div class="row g-3">
+            <div class="col-md-3">
+                <img class="staffImage" src="assets/staff-image-1.jpg" alt="">
+            </div>
+            <div id="staff" class="col-md-3">
+                <div class="lowerHower">
+                    <h4
+                        style="text-transform: uppercase;margin-bottom: 21px; font-size: 14px; font-weight: bold;letter-spacing: 0.05em;">
+                        john martin
+                    </h4>
+                    <p class="changeColor">Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum
+                        felis, vel placerat
+                        nec.
+                    </p>
+                    <div class="sponLine my-3 m-auto"></div>
+                    <div class="staffIcon">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <img style="width: 100%; height: auto;" src="assets/staff-image-5.jpg" alt="">
+            </div>
+            <div id="staff" class="col-md-3">
+                <div class="lowerHower">
+                    <h4
+                        style="text-transform: uppercase;margin-bottom: 21px; font-size: 14px; font-weight: bold;letter-spacing: 0.05em;">
+                        john martin
+                    </h4>
+                    <p class="changeColor">Donec varius ultrices purus. ullam sit amet sapien tortor. Aenean it inteum
+                        felis, vel placerat
+                        nec.
+                    </p>
+                    <div class="sponLine my-3 m-auto"></div>
+                    <div class="staffIcon">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- change -->
     <div id="change" class="container-fluid">
         <div class="container">
@@ -323,9 +298,10 @@
                         Select your newsletters, enter your email address, and click "Subscribe"
                     </p>
                     <div class="input-group pt-3">
-                        <input placeholder="Email Address" type="text" class="form-control rounded-0 h-auto" aria-label="Dollar amount (with dot and two decimal places)">
+                        <input placeholder="Email Address" type="text" class="form-control rounded-0 h-auto"
+                            aria-label="Dollar amount (with dot and two decimal places)">
                         <span style="background: #fa6f1c; color: white;" class="input-group-text rounded-0">Go</span>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-md-3">
                     <h5 class="feat">contact us</h5>
