--- a/contactUs.html
+++ b/contactUs.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head >
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Causes</title>
+    <title>Contact Us</title>
     <!-- Font Awsome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body >
+<body style="overflow-x: hidden;">
     <!-- top Bar -->
     <div id="top" class="container-fluid bg-body-tertiary ">
         <div id="topBar" class="row ">
@@ -60,11 +60,11 @@
                 <div class="navbar-nav">
                     <a class="nav-link " href="index.html">HOME</a>
                     <a class="nav-link" href="aboutUs.html">ABOUT US</a>
-                    <a class="nav-link" href="#">CAUSES</a>
+                    <a class="nav-link" href="causes.html">CAUSES</a>
                     <a class="nav-link" href="events.html">EVENTS</a>
                     <a class="nav-link" href="#">BLOGS</a>
                     <a class="nav-link" href="staff.html">STAFF</a>
-                    <a class="nav-link" href="contactUs.html">CONTACT US</a>
+                    <a class="nav-link" href="#">CONTACT US</a>
                 </div>
                 <button id="logo_btn" type="button" class="btn rounded-0">DONATE</button>
             </div>
@@ -73,174 +73,107 @@
     <!-- hero section -->
     <div class="comtainer">
         <div class="mainImage2">
-            <img src="assets/main-image-2.jpg" alt="">
+            <img src="assets/main-image-1.jpg" alt="">
             <div class="mainImage1Txt2">
-                <h4 style="color: white; font-weight: bold;">CAUSES</h4>
+                <h4 style=" font-weight: bold;">CONTACT US</h4>
                 <div class="box d-sm-flex">
                     <p class="box1"><span>: :</span>home <span style="color: black;padding-left: 10px;">/</span></p>
-                    <p class="box2"><span>: :</span>causes</p>
+                    <p class="box2"><span>: :</span>contact</p>
                 </div>
             </div>
         </div>
     </div>
-    <!-- lower hero section -->
-     <div class="container mt-5 py-3">
+    <!-- slider section -->
+    <div class="container mt-5 py-3">
         <div class="row g-5">
             <div class="col-md-8">
-                <div class="long">
-                    <img src="assets/cause-image-2.jpg" alt="">
-                    <div class="longDiv">
-                        <h3>change a life through education</h3>
-                        <span class="longSpan">for children</span>
-                    </div>
-                    <p id="div">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit. Integer accumsan elit viverra, placerat dolor quis, pulvinar velit. Sed auctor lacus eu purus .
-                    </p>
-                    <div class="newlongLine">
-                    <div class="newlongLine2">
-                        
-                    </div>
-                    <span>84.00%</span>
-                    </div>
-                    <div id="space" class="d-sm-flex justify-content-between w-75 mt-4">
-                        <div class="txt1">
-                            <p>17Sponsors</p>
+                <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/post-image-2.jpg" class="d-block w-100" alt="...">
                         </div>
-                        <div class="txt2">
-                            <p><span>$56,354.00</span> / $80,700.00</p>
+                        <div class="carousel-item">
+                            <img src="assets/post-image-1.jpg" class="d-block w-100" alt="...">
                         </div>
                     </div>
-                    <button id="longBtn" type="button" class="btn rounded-0">donate now</button>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-
-                <div class="long mt-5">
-                    <img class="w-100 h-auto" src="assets/cause-image-1.jpg" alt="">
-                    <div class="longDiv">
-                        <h3 >Protect Animals</h3>
-                        <span class="longSpan">for animal</span>
+                <p class="lowerTxt mt-5">
+                    Subdue and blessed heaven green so one make dry of behold god yielding. Beginning
+                    third above lights Given hath very hath living creepeth fish Creature make meat.
+                    So greater itself fly sixth green was wherein i Saw the divided that. Night gathered
+                    void set spirit void.
+                    <br><br>
+                    Waters made blessed creature dry fish have creature wherein living also fill from air
+                    can't to and it. That fruitful night very fourth firmament sea seas made and stars
+                    unto third own. Lesser form place seasons is above seas you seed itself lesser brought.
+                    Greater.
+                </p>
+                <div class="row">
+                    <div class="col-md-6 m-auto">
+                        <h3 class="iconTxt5">montreal</h3>
+                        <p class="lowerTxt2">
+                            51 Sherbrooke West <br>
+                            Montréal (QC), H4B 2Y2 <br>
+                            <br>
+                            Office — (514) 888-8888<br>
+                            Fax — (514) 888-9999 <br> <br>
+                            Email: <span><a style="text-decoration: none;" href="">office@charity.com</a></span> <br>
+                            web: <span><a style="text-decoration: none;" href="">http://charity.com</a></span>
+                        </p>
                     </div>
-                    <p id="div">
-                        Forth fruit beginning life likeness dry day from one rule it
-                        earth isn't sea fourth. Doesn't you're they're herb moved he female wherein shall upon.
-                    </p>
-                    <div class="newlongLine3">
-                    <div class="newlongLine1">
+                    <div class="col-md-6 ">
+                        <h3 class="iconTxt5">newyork</h3>
+                        <p class="lowerTxt2">
+                            51 Sherbrooke West <br>
+                            Montréal (QC), H4B 2Y2 <br>
+                            <br>
+                            Office — (514) 888-8888<br>
+                            Fax — (514) 888-9999 <br> <br>
+                            Email: <span><a style="text-decoration: none;" href="">office@charity.com</a></span> <br>
+                            web: <span><a style="text-decoration: none;" href="">http://charity.com</a></span>
+                        </p>
                     </div>
-                    <span>45.00%</span>
-                    </div>
-                    <div id="space" class="d-sm-flex justify-content-between w-75 mt-4">
-                        <div class="txt1">
-                            <p>12Sponsors</p>
-                        </div>
-                        <div class="txt2">
-                            <p><span>$14,354.00</span> / $124,700.00</p>
-                        </div>
-                    </div>
-                    <button id="longBtn" type="button" class="btn rounded-0">donate now</button>
-                </div>
-                <div class="long mt-5">
-                    <img class="w-100 h-auto" src="assets/cause-image-4.jpg" alt="">
-                    <div class="longDiv">
-                        <h3>Let’s build something incredible</h3>
-                        <span class="longSpan">for human</span>
-                    </div>
-                    <p id="div">
-                        Them behold man cattle seas. The cattle lights give without
-                        . May there spirit cattle lesser his I set night beginning rule, place multiply I beginning.
-                    </p>
-                    <div class="newlongLine3">
-                    <div class="newlongLine1">
-                    </div>
-                    <span>45.00%</span>
-                    </div>
-                    <div id="space" class="d-sm-flex justify-content-between w-75 mt-4">
-                        <div class="txt1">
-                            <p>12Sponsors</p>
-                        </div>
-                        <div class="txt2">
-                            <p><span>$14,354.00</span> / $124,700.00</p>
-                        </div>
-                    </div>
-                    <button id="longBtn" type="button" class="btn rounded-0">donate now</button>
-                </div>
-                <div class="long mt-5">
-                    <img class="w-100 h-auto" src="assets/cause-image-3.jpg" alt="">
-                    <div class="longDiv">
-                        <h3>Give Them Education</h3>
-                        <span class="longSpan">for kids</span>
-                    </div>
-                    <p id="div">
-                        You their kind void. Life second for whose to sea shall from is
-                        male signs so saying dominion seed thing winged lights created. Second fruitful give herb.
-                    </p>
-                    <div class="newlongLine3">
-                    <div class="newlongLine1">
-                    </div>
-                    <span>45.00%</span>
-                    </div>
-                    <div id="space" class="d-sm-flex justify-content-between w-75 mt-4">
-                        <div class="txt1">
-                            <p>45Sponsors</p>
-                        </div>
-                        <div class="txt2">
-                            <p><span>$14,354.00</span> / $124,700.00</p>
-                        </div>
-                    </div>
-                    <button id="longBtn" type="button" class="btn rounded-0">donate now</button>
                 </div>
             </div>
-            <div class="col-md-4">
-                <h5 class="feat pt-4">caused catagories</h5>
+            <div class="col-md-4  ">
+                <h5 class="feat ">get in touch</h5>
+                <div class="sponLine my-3 "></div>
+                <p class="lowerTxt2">
+                    51 Sherbrooke West <br>
+                    Montréal (QC), H4B 2Y2 <br>
+                    <br>
+                    Office — (514) 888-8888<br>
+                    Fax — (514) 888-9999 <br> <br>
+                    Email: <span><a style="text-decoration: none;" href="">office@charity.com</a></span> <br>
+                    web: <span><a style="text-decoration: none;" href="">http://charity.com</a></span>
+                </p>
+                <h5 class="feat pt-4">upcoming events</h5>
                 <div class="sponLine my-3"></div>
-                <ul class="causesList">
-                    <a class="human" href=""><li><span>></span> human</li></a>
-                    <a class="human" href=""><li><span>></span> earthquack affected</li></a>
-                    <a class="human" href=""><li><span>></span> animal</li></a>
-                    <a class="human" href=""><li><span>></span> education</li></a>
-                    <a class="human" href=""><li><span>></span> medical center</li></a>
-                    <a class="human" href=""><li><span>></span> international</li></a>
-                </ul>
-                <h5 class="feat pt-4">latest projects</h5>
-                <div class="sponLine my-3"></div>
-                <div>
-                    <img id="upComing" class="pt-4 h-auto" src="assets/upcoming-event (1).jpg" alt="">
+                <img style="max-width: 100%;" class="pt-4 h-auto" src="assets/event-image.jpg" alt="">
+                <h5 style="font-size: 15px; width:65% ;" class="feat my-4 ">
+                    organizing desaes events to get good donation
+                </h5>
+                <p style="margin-bottom: 1rem; letter-spacing: 0.025em; width:65% ;">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, animi.
+                </p>
+                <div class="d-sm-flex">
+                    <button id="more" type="submit" class="btn btn-primary rounded-0">more</button>
+                    <i id="icon22" class="fa-brands fa-facebook-f"></i>
                 </div>
-                <h5 style="font-size: 15px; width:65% ;" class="feat my-4 ">
-                    Music charity function
-                </h5>
-                <p style="margin-bottom: 1rem; letter-spacing: 0.025em; width:65% ;">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, animi.
-                </p>
                 <hr>
-                <img id="upComing" class="pt-4 h-auto" src="assets/latest-project-1.jpg" alt="">
-                <h5 style="font-size: 15px; width:65% ;" class="feat my-4 ">
-                    clean water supply
-                </h5>
-                <p style="margin-bottom: 1rem; letter-spacing: 0.025em; width:65% ;">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, animi.
-                </p>
-                <hr>
-                <img id="upComing" class="pt-4 h-auto" src="assets/latest-project-2.jpg" alt="">
-                <h5 style="font-size: 15px; width:65% ;" class="feat my-4 ">
-                    dog got a food
-                </h5>
-                <p style="margin-bottom: 1rem; letter-spacing: 0.025em; width:65% ;">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, animi.
-                </p>
-                <hr>
-                <h5 class="feat pt-4">text widgets</h5>
-                <div class="sponLine my-3"></div>
-                <p>
-                    Gathered gathered for very. Greater of firmament behold fowl moving were beginning stars, all.
-                    <br>
-                    <br>
-                    Seasons wherein the itself upon, cattle gathered Also moveth likeness fowl them fifth, 
-                    him greater Made every day one us morning.
-                </p>
             </div>
         </div>
-     </div>
+    </div>
     <!-- change -->
     <div id="change" class="container-fluid">
         <div class="container">
@@ -323,9 +256,10 @@
                         Select your newsletters, enter your email address, and click "Subscribe"
                     </p>
                     <div class="input-group pt-3">
-                        <input placeholder="Email Address" type="text" class="form-control rounded-0 h-auto" aria-label="Dollar amount (with dot and two decimal places)">
+                        <input placeholder="Email Address" type="text" class="form-control rounded-0 h-auto"
+                            aria-label="Dollar amount (with dot and two decimal places)">
                         <span style="background: #fa6f1c; color: white;" class="input-group-text rounded-0">Go</span>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-md-3">
                     <h5 class="feat">contact us</h5>
