--- a/index.html
+++ b/index.html
@@ -136,15 +136,18 @@
     <!-- featured causes -->
 
     <div class="container my-5 py-5">
-        <h2 class="featuretxt text-md-center">FEATURED CAUSES</h2>
-        <div id="small3" class="d-flex justify-content-center align-items-center">
-            <div class="featureLine"></div>
-            <img src="assets/ico-droplet.png" alt="">
-            <div class="featureLine"></div>
+        <div class="container-md-fluid">
+            <h2 class="featuretxt text-center">FEATURED CAUSES</h2>
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="featureLine"></div>
+                <img src="assets/ico-droplet.png" alt="">
+                <div class="featureLine"></div>
+            </div>
+            <p class="featuretxt2 text-md-center m-auto">
+                Integer sit amet augue iaculis, ultricies justo nec, commodo nisi. Class aptent
+                taciti sociosqu ad litora torquent per conubia nostra.
+            </p>
         </div>
-        <p class="featuretxt2 text-md-center m-md-auto">Integer sit amet augue iaculis, ultricies justo nec,
-            commodonisi. Class aptenttaciti sociosqu ad litora torquent per conubia nostra.
-        </p>
         <div id="small1" class="row my-4 g-5">
             <div class="col">
                 <div class="card rounded-0" style="width: 18rem;">
