--- a/causes.html
+++ b/causes.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body >
+<body style="overflow-x: hidden;">
     <!-- top Bar -->
     <div id="top" class="container-fluid bg-body-tertiary ">
         <div id="topBar" class="row ">
