--- a/aboutUs.html
+++ b/aboutUs.html
@@ -260,10 +260,8 @@
                     </div>
                     <button id="submit" type="submit" class="btn btn-primary rounded-0">Submit</button>
                 </div>
-
-
             </div>
-
+            <!-- popular post -->
             <div class="col-md-4  ">
                 <h5 class="feat ">popular post</h5>
                 <div class="sponLine my-3 "></div>
@@ -293,11 +291,12 @@
                             <p style="font-size: small;">May 7 2019</p>
                         </div>
                     </div>
+                    <!-- upcoming events -->
                 </div>
                 <h5 class="feat pt-4">upcoming events</h5>
                 <div class="sponLine my-3"></div>
                 <img style="max-width: 100%;" class="pt-4 h-auto" src="assets/event-image.jpg" alt="">
-                <h5 style="font-size: 15px; width:65% ;" class="feat my-4 ">
+                <h5 class="event my-4 ">
                     organizing desaes events to get good donation
                 </h5>
                 <p style="margin-bottom: 1rem; letter-spacing: 0.025em; width:65% ;">
