--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <h3 style="letter-spacing: 3px; font-weight: 600;">WE CAN CHANGE IT <br> TOGETHER DO IT NOW !
                         </h3>
                         <div class="line"></div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, delectus vero. Labore
+                        <p style="color: white;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, delectus vero. Labore
                             accusant</p>
                         <button id="sld_btn" type="button" class="btn rounded-0">LEARN MORE</button>
                     </div>
