--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <div id="sec1" class="col-md-7 sm-12">
                                 <div class="mng m-md-auto">
                                     <h3 style="letter-spacing: 3px; font-weight: 600;">SEND CHILDREN TO SCHOOL</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi temporibus non
+                                    <p style="color:  white;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi temporibus non
                                         asperiores error a cupiditate
                                     </p>
                                 </div>
